fix songs titles when too big

--- a/app/public/stylesheets/sass/_components/_songlist.scss
+++ b/app/public/stylesheets/sass/_components/_songlist.scss
@@ -28,6 +28,8 @@
   position: relative;
   width: 100%;
   height: 300px;
+  background: $sectionBackground;
+  border: 1px solid $separatorDarkColor;
 }
 
 .songList_item_artwork {
@@ -77,7 +79,9 @@ li.active {
 .songList_item_song_tit {
   font-size: 20px;
   margin: 5px 0;
-  height: 50px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
   overflow: hidden;
 }
 
