--- a/app/public/stylesheets/sass/_components/_topFrame.scss
+++ b/app/public/stylesheets/sass/_components/_topFrame.scss
@@ -36,6 +36,7 @@
   cursor: pointer;
   border-radius: 15px;
   padding: 2px 4px;
+  letter-spacing: 0;
 
   &:nth-child(1) {
     background: #D96C76;
